src/test/resources/refCompilerOutput/invalid/syntaxErr/function/funcExpr.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 15:11 -- mismatched input '(' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', '[', ';'}
Syntactic Error at 15:17 -- mismatched input '(' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', '[', ';'}
2 parser error(s) detected, no further compilation attempted.
